[package]
name = "densmap"
version = "0.1.0"
authors = ["Petter Johansson <pettjoha@kth.se>"]
edition = "2018"

[dependencies]
byteorder = "1"
flate2 = "1"
pbr = "1"
rayon = "1"
regex = "1"
structopt = "0.2"
structopt-derive = "0.2"
walkdir = "2"

[dev-dependencies]
criterion = "0.2"

[[bin]]
path = "src/bin/main.rs"
name = "densmap-analysis"
doc = false

[[bench]]
name = "bin_neighbour_lists"
harness = false
